--- a/debian/control
+++ b/debian/control
@@ -8,12 +8,12 @@ Standards-Version: 4.1.3
 VCS-git: https://github.com/mirabilos/sftools
 VCS-Browser: https://github.com/mirabilos/sftools
 
-Package: musescore-sftools
+Package: musescore-sfconvert
 Architecture: any
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: MuseScore SoundFont converter
- The sfconvert tool can be used to convert an SF2 SoundFont
+ The musescore-sfconvert tool can be used to convert an SF2 SoundFont
  into SF3 format, or into C code for embedding into a binary.
  .
  The SF3 SoundFont format is the same as SF2, except it uses
