--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Thorsten Glaser <tg@mirbsd.de>
 Homepage: https://github.com/musescore/sftools
 Build-Depends: cmake, debhelper (>= 11~), libsndfile1-dev, qtbase5-dev (>= 5.6)
 Standards-Version: 4.1.3
-VCS-git: https://github.com/mirabilos/sftools
-VCS-Browser: https://github.com/mirabilos/sftools
+VCS-git: https://github.com/mirabilos/sftools -b stretch-backports
+VCS-Browser: https://github.com/mirabilos/sftools/tree/stretch-backports
 
 Package: sf3convert
 Architecture: any
