this is now required by Policy 4.2.0.0

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,10 @@
 #!/usr/bin/make -f
 
+ifeq (,$(findstring terse,${DEB_BUILD_OPTIONS}))
+export DH_VERBOSE=1
+export V=1
+endif
+
 LC_ALL:=C
 export LC_ALL
 
