--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Thorsten Glaser <tg@mirbsd.de>
 Homepage: https://github.com/musescore/sftools
-Build-Depends: cmake, debhelper (>= 11), libsndfile1-dev, qtbase5-dev (>= 5.6)
+Build-Depends: cmake, debhelper (>= 12~), libsndfile1-dev, qtbase5-dev (>= 5.6)
 Standards-Version: 4.1.3
 VCS-git: https://github.com/mirabilos/sftools
 VCS-Browser: https://github.com/mirabilos/sftools
