--- a/debian/rules
+++ b/debian/rules
@@ -1,15 +1,17 @@
 #!/usr/bin/make -f
 
-ifeq (,$(findstring terse,${DEB_BUILD_OPTIONS}))
+ifeq (,$(filter terse,${DEB_BUILD_OPTIONS}))
 export DH_VERBOSE=1
 export V=1
+export VERBOSE=1
 endif
 
 LC_ALL:=C
 export LC_ALL
+TZ:=UTC
+export TZ
 
 export DEB_BUILD_MAINT_OPTIONS := hardening=+all
-export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 
 %:
 	dh $@ --buildsystem=cmake
