Remove constraints unnecessary since buster (oldstable)
* Build-Depends: Drop versioned constraint on qtbase5-dev (>= 5.6).

Changes-By: deb-scrub-obsolete

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Thorsten Glaser <tg@mirbsd.de>
 Homepage: https://github.com/musescore/sftools
 Build-Depends: cmake, debhelper-compat (= 13),
- libsndfile1-dev, pkgconf, qtbase5-dev (>= 5.6)
+ libsndfile1-dev, pkgconf, qtbase5-dev
 Standards-Version: 4.6.1
 Rules-Requires-Root: no
 VCS-git: https://github.com/mirabilos/sftools
